# GW2Nexus-AddonTemplate-Unix

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-docker.sh  build-podman.sh  ci.nix  flake.nix  package.nix
.github/workflows/: libclion_demo.yml
resources/: resources.h  resources.rc
src/: Constants.h  Globals.cpp  Globals.h  entry.cpp
src/service/: AddonLoad.cpp  AddonLoad.h  AddonRenderer.cpp  AddonRenderer.h
